--- a/maquetacion/css/menu.css
+++ b/maquetacion/css/menu.css
@@ -16,6 +16,12 @@ a
 	color:#DDD;
 }
 
+article
+{
+	width:100%;
+	height: 853px;
+}
+
 span.img-buscar
 {
 	background: url(../img/buscar.png) no-repeat;
@@ -77,13 +83,8 @@ span.separador
 	display:block;
 	float:left;
 	height:80px;
-	margin:10px 0px 0px 150px;
+	margin:10px 0px 0px 60px;
 	text-indent:-9999px;
-	transform: translate3d(0,0,0);
-	-o-transform: translate3d(0,0,0);
-	-ms-transform: translate3d(0,0,0);
-	-moz-transform: translate3d(0,0,0);
-	-webkit-transform: translate3d(0,0,0);
 	width:80px;
 }
 #logo:hover 
@@ -102,7 +103,7 @@ span.separador
 
 nav#menu
 {
-	margin: 0 200px 0 0;
+	margin: 0 100px 0 0;
 	position:absolute;
 	right: 0px;
 	top: 50px;	
@@ -114,8 +115,90 @@ nav#menu ul li
 	float:left;
 }
 
-/*Slider*/
+/*Productos*/
+section
+{
+	margin-top: 100px;
+	width: 680px;
+}
+
+div.principales 
+{
+	float: left;
+	margin: 0 0 25px 0;
+	padding: 0 0 20px 0;
+	width: 740px;
+}
+
+div.principales h3
+{
+	margin: 10px 15px;
+	padding: 0 15px;
+}
+
+div.principales ul li
+{
+	display:inline;
+	float:left;
+	height: 180px;
+	margin: 10px 30px;
+	width: 170px;
+}
  
+/*Aside*/
+ 
+aside
+{
+	width: 530px;
+	position: absolute;
+	float:left;/*
+	top: -605px;*/
+	right:0;
+	margin-left:10px;
+}
+aside div
+{
+	padding: 1px 0 40px 0;
+	margin: 0px 10px;
+}
+aside div img
+{
+	width: 55px;
+}
+
+span.textTwitt, span.textFace
+{
+	margin: -50px 0 0 0;
+	display: block;
+	position: relative;
+	left: 67px;
+	width: 430px;
+}
+aside div h3
+{
+	margin: 20px 30px;
+}
+
+aside ul li
+{
+	padding: 10px 0px;
+	margin: 20px 0px;
+}
+/*footer*/
+footer
+{
+	background:#1a1d1d;
+	bottom:0px;
+	float:left;
+	position:relative;
+	width:100%;
+}
+
+footer ul li
+{
+	display:inline;
+	float:left;
+}
 /*Animacion*/
 @-moz-keyframes rotate_bounce{0%{transform:rotate(0);-o-transform:rotate(0);-ms-transform:rotate(0);-moz-transform:rotate(0);-webkit-transform:rotate(0)}
 70%{transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);-moz-transform:rotate(360deg);-webkit-transform:rotate(360deg)}
@@ -148,3 +231,54 @@ nav#menu ul li
 }@keyframes rotate{0%{transform:rotate(0);-o-transform:rotate(0);-ms-transform:rotate(0);-moz-transform:rotate(0);-webkit-transform:rotate(0)}
 100%{transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);-moz-transform:rotate(360deg);-webkit-transform:rotate(360deg)}
 }
+
+/*Redimension*/
+@media(max-width:1200px)
+{
+  aside
+	{
+		width:415px;
+	}
+	
+	span.textTwitt, span.textFace
+	{
+		width:300px;
+	}
+}
+
+@media(max-width:1100px)
+{
+  aside
+	{
+		width:300px;
+	}
+	
+	span.textTwitt, span.textFace
+	{
+		width:190px;
+	}
+}
+
+@media(max-width:1100px)
+{
+  aside
+	{
+		width:280px;
+	}
+	
+	span.textTwitt, span.textFace
+	{
+		width:180px;
+	}
+}
+
+@media(max-width:960px)
+{
+  aside
+	{
+		display:none;
+	}
+}
+
+
+
