--- a/maquetacion/css/style.css
+++ b/maquetacion/css/style.css
@@ -78,9 +78,14 @@
 .da-slide .da-img{
 	text-align: center;
 	width: 30%;
-	height: 256px;
+	height: 400px;
 	line-height: 320px;
 	left: 110%; /*60%*/
+}
+
+.da-img img
+{
+	height: 400px;
 }
 .da-slide .da-link{
 	top: 270px; /*depends on p height*/
