--- a/maquetacion/css/menu.css
+++ b/maquetacion/css/menu.css
@@ -1,29 +1,22 @@
-#da-slider p 
-{
+#da-slider p {
     color: White;
 }
 
-body
-{
+body{
 	background:#EEE;
 	color:#3d4445;
 	font-family: "Century Gothic", Verdana, sans-serif;
 	font-size:16px;
-	line-height:1.2em;
+	line-height:1.25em;
 	width:100%;
 	min-width:960px;
 	margin:0 auto;
 }
 
-a
-{
-	text-decoration:none;
-	color:#DDD;
-}
+a{text-decoration:none;	color:#DDD;}
 
 
-span.img-buscar
-{
+span.img-buscar{
 	background: url(../img/buscar.png) no-repeat;
 	background-size:20px 20px;
 	display:block;
@@ -33,8 +26,7 @@ span.img-buscar
 	width:20px;
 }
 
-span.img-polo
-{
+span.img-polo{
 	background: url(../img/polo.png) no-repeat;
 	background-size:20px 20px;
 	display:block;
@@ -44,8 +36,7 @@ span.img-polo
 	width:20px;
 }
 
-span.img-ingresar
-{
+span.img-ingresar{
 	background: url(../img/user.png) no-repeat;
 	background-size:20px 20px;
 	display:block;
@@ -55,8 +46,7 @@ span.img-ingresar
 	width:20px;
 }
 
-span.separador
-{
+span.separador{
 	border-right:2px dotted #DDD;
 	display:block;
 	height:20px;
@@ -65,8 +55,7 @@ span.separador
 }
 
 /*HEADER-PRINCIPAL*/
-.wrapper
-{
+.wrapper{
 	background:#1a1d1d;
 	height:100px;
 	min-width:960px;
@@ -76,8 +65,15 @@ span.separador
 	z-index:5000;
 }
 
-#logo
-{
+.titulo{
+	color:#DDD;
+	font-family: 'Montez', cursive;
+	font-size:5.0em;
+	margin-top: 40px;
+	margin-left: 220px;
+}
+
+#logo{
 	background: url(../img/logo.png) no-repeat;
 	background-size:80px 80px;
 	display:block;
@@ -87,8 +83,7 @@ span.separador
 	text-indent:-9999px;
 	width:80px;
 }
-#logo:hover 
-{
+#logo:hover {
 	-moz-animation-direction:alternate;
 	-moz-animation-duration:.5s;
 	-moz-animation-iteration-count:1;
@@ -101,16 +96,14 @@ span.separador
 	-webkit-animation-timing-function:ease-out
 }
 
-nav#menu
-{
+nav#menu{
 	margin: 0 100px 0 0;
 	position:absolute;
 	right: 0px;
 	top: 50px;	
 }
 
-nav#menu ul li
-{
+nav#menu ul li{
 	display:inline;
 	float:left;
 }
@@ -156,36 +149,29 @@ ul li.principales {margin-bottom: 210px;}
 #twitter ul li span, #facebook ul li span{margin-left: 60px;display: block;margin-top: -50px;width:200px;font-size:0.9em;}
 
 /*footer*/
-footer
-{
+footer{
 	margin-top:50px;
 	float:left;
 	width:100%; 
 	
 }
-footer .registra
-{
+footer .registra{
 	text-align: center;
 	line-height: 3.2em;
 }
-footer .registra h4
-{
+footer .registra h4{
 	font-size:1.6em;
 }
-footer .registra h5, footer .registra a
-{
+footer .registra h5, footer .registra a{
 	font-size:1.1em;
 	color: #3D4445;
 }
-footer  .oferta
-{
-	
+footer  .oferta{	
 	height: 553px;
 	width: 276px;
 }
 
-footer .oferta span
-{
+footer .oferta span{
 	background: url(../img/negocia.png) no-repeat 0 0;
 	display:block;
 	height: 138px;
@@ -206,10 +192,15 @@ footer #contacto
 	height: 120px;
 }
 
-footer ul li.lista_footer
-{
-	float:left;
-}
+footer div.siguenos, footer div.suscribete, footer div.otros{width:250px;color:#DDD;}
+footer div.siguenos h3, footer div.suscribete h3, footer div.otros h3{font-size:1.3em;margin-bottom:15px;font-weight:bold;}
+footer div.siguenos ul, footer div.suscribete ul, footer div.otros ul{font-size:0.9em;}
+footer div.siguenos{float:left;}
+footer div.siguenos ul li{display:inline;margin:10px 12px;}
+footer div.suscribete{margin: 0 auto;}
+footer div.suscribete input{width:120px;}
+footer div.otros{float:right;margin-top:-120px;margin-right: 20px;}
+
 /*Animacion*/
 @-moz-keyframes rotate_bounce{0%{transform:rotate(0);-o-transform:rotate(0);-ms-transform:rotate(0);-moz-transform:rotate(0);-webkit-transform:rotate(0)}
 70%{transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);-moz-transform:rotate(360deg);-webkit-transform:rotate(360deg)}
