--- a/maquetacion/css/menu.css
+++ b/maquetacion/css/menu.css
@@ -55,7 +55,7 @@ span.separador{
 }
 
 /*HEADER-PRINCIPAL*/
-.wrapper{
+header{
 	background:#1a1d1d;
 	height:100px;
 	min-width:960px;
@@ -65,47 +65,28 @@ span.separador{
 	z-index:5000;
 }
 
+.wrapper{
+	margin: 0 auto;
+	width:960px;
+}
+
 .titulo{
 	color:#DDD;
 	font-family: 'Montez', cursive;
 	font-size:5.0em;
 	margin-top: 40px;
-	margin-left: 220px;
-}
-
-#logo{
-	background: url(../img/logo.png) no-repeat;
-	background-size:80px 80px;
-	display:block;
-	float:left;
-	height:80px;
-	margin:10px 0px 0px 60px;
-	text-indent:-9999px;
-	width:80px;
-}
-#logo:hover {
-	-moz-animation-direction:alternate;
-	-moz-animation-duration:.5s;
-	-moz-animation-iteration-count:1;
-	-moz-animation-name:rotate_bounce;
-	-moz-animation-timing-function:ease-out;
-	-webkit-animation-direction:alternate;
-	-webkit-animation-duration:.5s;
-	-webkit-animation-iteration-count:1;
-	-webkit-animation-name:rotate_bounce;
-	-webkit-animation-timing-function:ease-out
+	margin-left: 20px;
 }
 
 nav#menu{
-	margin: 0 100px 0 0;
-	position:absolute;
-	right: 0px;
-	top: 50px;	
+	float:right;
+	margin-right:20px;
 }
 
 nav#menu ul li{
 	display:inline;
 	float:left;
+	margin-top:-15px;
 }
 
 nav#menu #buscar{border: 1px solid #1A1D1D;padding: 4px 7px;width: 120px;background-color:#DDD;margin-top:-7px;
@@ -200,36 +181,3 @@ footer div.siguenos ul li{display:inline;margin:10px 12px;}
 footer div.suscribete{margin: 0 auto;}
 footer div.suscribete input{width:120px;}
 footer div.otros{float:right;margin-top:-120px;margin-right: 20px;}
-
-/*Animacion*/
-@-moz-keyframes rotate_bounce{0%{transform:rotate(0);-o-transform:rotate(0);-ms-transform:rotate(0);-moz-transform:rotate(0);-webkit-transform:rotate(0)}
-70%{transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);-moz-transform:rotate(360deg);-webkit-transform:rotate(360deg)}
-85%{transform:rotate(355deg);-o-transform:rotate(355deg);-ms-transform:rotate(355deg);-moz-transform:rotate(355deg);-webkit-transform:rotate(355deg)}
-100%{transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);-moz-transform:rotate(360deg);-webkit-transform:rotate(360deg)}
-}@-webkit-keyframes rotate_bounce{0%{transform:rotate(0);-o-transform:rotate(0);-ms-transform:rotate(0);-moz-transform:rotate(0);-webkit-transform:rotate(0)}
-70%{transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);-moz-transform:rotate(360deg);-webkit-transform:rotate(360deg)}
-85%{transform:rotate(355deg);-o-transform:rotate(355deg);-ms-transform:rotate(355deg);-moz-transform:rotate(355deg);-webkit-transform:rotate(355deg)}
-100%{transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);-moz-transform:rotate(360deg);-webkit-transform:rotate(360deg)}
-}@-o-keyframes rotate_bounce{0%{transform:rotate(0);-o-transform:rotate(0);-ms-transform:rotate(0);-moz-transform:rotate(0);-webkit-transform:rotate(0)}
-70%{transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);-moz-transform:rotate(360deg);-webkit-transform:rotate(360deg)}
-85%{transform:rotate(355deg);-o-transform:rotate(355deg);-ms-transform:rotate(355deg);-moz-transform:rotate(355deg);-webkit-transform:rotate(355deg)}
-100%{transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);-moz-transform:rotate(360deg);-webkit-transform:rotate(360deg)}
-}@-ms-keyframes rotate_bounce{0%{transform:rotate(0);-o-transform:rotate(0);-ms-transform:rotate(0);-moz-transform:rotate(0);-webkit-transform:rotate(0)}
-70%{transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);-moz-transform:rotate(360deg);-webkit-transform:rotate(360deg)}
-85%{transform:rotate(355deg);-o-transform:rotate(355deg);-ms-transform:rotate(355deg);-moz-transform:rotate(355deg);-webkit-transform:rotate(355deg)}
-100%{transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);-moz-transform:rotate(360deg);-webkit-transform:rotate(360deg)}
-}@keyframes rotate_bounce{0%{transform:rotate(0);-o-transform:rotate(0);-ms-transform:rotate(0);-moz-transform:rotate(0);-webkit-transform:rotate(0)}
-70%{transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);-moz-transform:rotate(360deg);-webkit-transform:rotate(360deg)}
-85%{transform:rotate(355deg);-o-transform:rotate(355deg);-ms-transform:rotate(355deg);-moz-transform:rotate(355deg);-webkit-transform:rotate(355deg)}
-100%{transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);-moz-transform:rotate(360deg);-webkit-transform:rotate(360deg)}
-}@-moz-keyframes rotate{0%{transform:rotate(0);-o-transform:rotate(0);-ms-transform:rotate(0);-moz-transform:rotate(0);-webkit-transform:rotate(0)}
-100%{transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);-moz-transform:rotate(360deg);-webkit-transform:rotate(360deg)}
-}@-webkit-keyframes rotate{0%{transform:rotate(0);-o-transform:rotate(0);-ms-transform:rotate(0);-moz-transform:rotate(0);-webkit-transform:rotate(0)}
-100%{transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);-moz-transform:rotate(360deg);-webkit-transform:rotate(360deg)}
-}@-o-keyframes rotate{0%{transform:rotate(0);-o-transform:rotate(0);-ms-transform:rotate(0);-moz-transform:rotate(0);-webkit-transform:rotate(0)}
-100%{transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);-moz-transform:rotate(360deg);-webkit-transform:rotate(360deg)}
-}@-ms-keyframes rotate{0%{transform:rotate(0);-o-transform:rotate(0);-ms-transform:rotate(0);-moz-transform:rotate(0);-webkit-transform:rotate(0)}
-100%{transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);-moz-transform:rotate(360deg);-webkit-transform:rotate(360deg)}
-}@keyframes rotate{0%{transform:rotate(0);-o-transform:rotate(0);-ms-transform:rotate(0);-moz-transform:rotate(0);-webkit-transform:rotate(0)}
-100%{transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);-moz-transform:rotate(360deg);-webkit-transform:rotate(360deg)}
-}
