--- a/maquetacion/css/style.css
+++ b/maquetacion/css/style.css
@@ -1,5 +1,5 @@
 .da-slider{
-	background: #61A7D8;
+	background: #7acbf9;
 	border-top: 8px solid #555;
 	border-bottom: 8px solid #555;
 	box-shadow: 0px 1px 1px rgba(0,0,0,0.2), 0px -2px 1px #fff;
