--- a/maquetacion/css/menu.css
+++ b/maquetacion/css/menu.css
@@ -3,7 +3,7 @@
 }
 
 body{
-	background:#EEE;
+	background:#ffffff;
 	color:#3d4445;
 	font-family: "Century Gothic", Verdana, sans-serif;
 	font-size:16px;
@@ -54,27 +54,24 @@ span.separador{
 	width:1px;
 }
 
-/*HEADER-PRINCIPAL*/
+/*###########################     HEADER-PRINCIPAL     #######################*/
 header{
 	background:#1a1d1d;
 	height:100px;
 	min-width:960px;
-	position:fixed;
-	top: 0px;
 	width:100%;
-	z-index:5000;
 }
 
 .wrapper{
 	margin: 0 auto;
 	width:960px;
+	padding-top:40px;
 }
 
 .titulo{
 	color:#DDD;
 	font-family: 'Montez', cursive;
 	font-size:5.0em;
-	margin-top: 40px;
 	margin-left: 20px;
 }
 
@@ -103,15 +100,16 @@ nav#menu #buscar:focus{width:170px;background-color:#FFF;}
 /*
  * div#banner{width:100%;background:#79BAF6;border-top: 8px solid #555;top:100px;border-bottom: 8px solid #555;position:relative;}
  */
+
+ 
  /*Menu*/
 
 article
 {
 	min-width:960px;
 	width: 960px;
-	margin: 120px auto 20px auto;
+	margin: 0px auto 20px auto;
 }
-article ul li{clear:both;}
 ul#contenedor{position:relative;}
 li#redes,li#productos{display:inline;float:left;}
 ul#contenedor li#redes{width:290px;position: absolute;top: 0px;left: 650px;margin-left: 10px;}
@@ -132,7 +130,19 @@ ul li.principales {margin-bottom: 210px;}
 #twitter h3, #facebook h3{font-size:1.3em;padding: 8px 10px;}
 #twitter ul li span, #facebook ul li span{margin-left: 60px;display: block;margin-top: -50px;width:200px;font-size:0.9em;}
 
-/*footer*/
+
+/*#####################      POLOS     ###############################*/
+h2.polo-tit{font-size:4em; text-align:center; margin:40px 0px 20px 0px;font-family: 'Montez', cursive;}
+ul#polo-contenedor{margin: 0 auto;width: 890px;position:relative;}
+ul#polo-contenedor li.zoom{display:inline;float:left;padding:20px 10px;}
+ul#polo-contenedor li.zoom figure{border:solid 1px #101113 ;border-radius:10px;background:#b9bdc5;}
+
+
+
+
+
+/*###############################    FOOTER    ###############################*/
+
 footer{
 	margin-top:50px;
 	float:left;
@@ -161,6 +171,7 @@ footer .oferta span{
 	height: 138px;
 	width: 553px;
 	margin: 0 auto;
+	
 }
 
 footer .oferta span:hover
