--- a/Layout.master
+++ b/Layout.master
@@ -5,89 +5,25 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" href="Styles/reset.css"/>
-		<link href='http://fonts.googleapis.com/css?family=Montez' rel='stylesheet' type='text/css'/>
 		<link rel="stylesheet" href="Styles/menu.css"/>
-		<link rel="stylesheet" href="Styles/style.css"/>
-		<script type="text/javascript" src="Scripts/modernizr.custom.28468.js"></script>
-		<noscript>
-			<link rel="stylesheet" type="text/css" href="Styles/nojs.css" />
-		</noscript>
-		
-		<title>Polet</title>
+        <title>Polet</title>
 	</head>
 	<body>
 		<header>
-			<div class="wrapper">
-				<h1 class="titulo"><a href="Index.aspx">Polet</a></h1>
-				<nav id="menu">
-					<ul>
-						<li><input type="text" id="buscar" placeholder="Buscar"/><span class="img-buscar"></span></li>
-						<li><span class="separador"></span></li>
-						<li><a href="Polos.aspx">Polos<span class="img-polo"></span></a></li>
-						<li><span class="separador"></span></li>
-						<li><a href="#">Ingresar<span class="img-ingresar"></span></a></li>
-					</ul>
-				</nav>
-			</div>			
+            <div>
+			    <h1 class="titulo"><a href="Index.aspx">Thread<span>more!</span></a></h1>
+                <div id="login">
+                    <a href="javascript:;">Login</a>
+                    or
+                    <a href="javascript:;">Sign Up</a>
+                </div>
+            </div>
 		</header>
 
         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
         </asp:ContentPlaceHolder>
 
-        <footer>
-			<div class="registra">
-			<h4>¿Nos quieres contactar?</h4>
-			<h5>Si tienes alguna sugerencia para nosotros no dudes en hacerla <a href="#">aqui</a></h5>
-			<a class="oferta" href="#">
-				<span></span>
-			</a>
-			</div>
-			<div id="foot_cont">
-				<div id="contacto">
-						
-						<div class="siguenos">
-							<h3>Siguenos en</h3>
-							<ul>
-								<li><a href="#"><img src="img/facebook.png" alt="face" width="50"/></a></li>
-								<li><a href="#"><img src="img/twitter.png" alt="twitt" width="50"/></a></li>
-							</ul>
-						</div>
-						<div class="suscribete">
-							<h3>Suscribete!</h3>
-							<ul>
-								<li>Suscribete a nuestra mailing diario para estar al tanto de nuestros mejores polos</li>
-								<li><input type="text"><a class="btn" href="#">suscribirme</a></li>
-							</ul>
-						</div>
-						<div class="otros">
-							<h3>Cosas aburridas</h3>
-							<ul>
-								<li>Copyright © 2012 All Rights Reserved </li>
-								<li><a href="terminos">Terminos y condiciones</a></li>
-								<li><a href="privacidad">Política de Privacidad</a></li>
-							</ul>
-						</div>
-		
-				</div>
-			</div>
-		</footer>
-		
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-		<script type="text/javascript" src="Scripts/jquery.cslider.js"></script>
-        <script type="text/javascript" src="Scripts/jquery.zoomooz.min.js"></script>
-		<script type="text/javascript" src="Scripts/funciones.js"></script>	
-         <script type="text/javascript">
-             $(document).ready(function () {
-                 $(".zoom").click(function (evt) {
-                     evt.stopPropagation();
-                     $(this).zoomTo();
-                 });
-                 $(window).click(function (evt) {
-                     evt.stopPropagation();
-                     $("body").zoomTo();
-                 });
-                 $("body").zoomTo();
-             });
-		</script>
+		<script type="text/javascript" src="Scripts/jquery-1.7.1.min.js"></script>
+		<script type="text/javascript" src="Scripts/funciones.js"></script>
 	</body>
 </html>
