--- a/Styles/menu.css
+++ b/Styles/menu.css
@@ -1,212 +1,115 @@
-﻿#da-slider p {
-    color: #1A1D1D;
-}
-
-body{
-	background:#ffffff;
-	color:#3d4445;
-	font-family: "Century Gothic", Verdana, sans-serif;
-	font-size:16px;
-	line-height:1.25em;
-	width:100%;
-	min-width:960px;
-	margin:0 auto;
-}
-
-a{text-decoration:none;	color:#DDD;}
-
-
-span.img-buscar{
-	background: url(../img/buscar.png) no-repeat;
-	background-size:20px 20px;
-	display:block;
-	float:right;
-	height:20px;
-	margin-left:20px;
-	width:20px;
-}
-
-span.img-polo{
-	background: url(../img/polo.png) no-repeat;
-	background-size:20px 20px;
-	display:block;
-	float:right;
-	height:20px;
-	margin-left:20px;
-	width:20px;
-}
-
-span.img-ingresar{
-	background: url(../img/user.png) no-repeat;
-	background-size:20px 20px;
-	display:block;
-	float:right;
-	height:20px;
-	margin-left:20px;
-	width:20px;
-}
-
-span.separador{
-	border-right:2px dotted #DDD;
-	display:block;
-	height:20px;
-	margin:0 30px 0 30px;
-	width:1px;
-}
-
-/*###########################     HEADER-PRINCIPAL     #######################*/
-header{
-	background:#1a1d1d;
-	height:100px;
-	min-width:960px;
-	width:100%;
-}
-
-.wrapper{
-	margin: 0 auto;
-	width:960px;
-	padding-top:40px;
-}
-
-.titulo{
-	color:#DDD;
-	font-family: 'Montez', cursive;
-	font-size:5.0em;
-	margin-left: 20px;
-}
-
-nav#menu{
-	float:right;
-	margin-right:20px;
-}
-
-nav#menu ul li{
-	display:inline;
-	float:left;
-	margin-top:-15px;
-}
-
-nav#menu #buscar{border: 1px solid #1A1D1D;padding: 4px 7px;width: 120px;background-color:#DDD;margin-top:-7px;
-							-webkit-transition: width ease-in 0.7s,background-color ease-in 0.7s;
-							-moz-transition: width ease-in 0.7s,background-color ease-in 0.7s;
-							-ms-transition: width ease-in 0.7s,background-color ease-in 0.7s;
-							-o-transition: width ease-in 0.7s,background-color ease-in 0.7s;
-							-webkit-border-radius: 7px;
-							-moz-border-radius: 7px;
-							-ms-border-radius: 7px;
-							-o-border-radius: 7px;}
-nav#menu #buscar:focus{width:170px;background-color:#FFF;}
-
-/*
- * div#banner{width:100%;background:#79BAF6;border-top: 8px solid #555;top:100px;border-bottom: 8px solid #555;position:relative;}
- */
-
- 
- /*Menu*/
-
-article
+﻿body
 {
-	min-width:960px;
+	background: hsl(0, 0%, 96%);
+	color: #3d4445;
+	font-family: 'Calibri', 'Helvetica Neue', sans-serif;
+	font-size: 16px;
+	line-height: 1.25em;
+	margin: 0 auto;
+	min-width: 960px;
+	width: 100%;
+}
+
+a
+{
+	color: hsl(0, 0%, 27%);
+	text-decoration: none;
+	font-weight: bold;
+}
+
+header
+{
+    
+}
+
+header > div
+{
 	width: 960px;
-	margin: 0px auto 20px auto;
-}
-ul#contenedor{position:relative;}
-li#redes,li#productos{display:inline;float:left;}
-ul#contenedor li#redes{width:290px;position: absolute;top: 0px;left: 650px;margin-left: 10px;}
-ul#contenedor li#productos{width:630px;}
-
-ul li.principales figure{display:block;float:left;}
-ul li.principales h3{font-size:1.3em;padding: 8px 20px;}
-ul li.principales figure{margin: 10px 15px;}
-ul li.principales {margin-bottom: 210px;}
-
-.thumb{	border: 8px solid #adacae;position:relative;overflow:hidden;border-radius:5px;}
-.thumb section{	background: #000;padding:10px;height:140px;}
-.thumb p{	line-height:18px;}
-.thumb img{	position:absolute;left:-14px;background:#000;}
-
-#twitter, #facebook{width:50px;}
-#twitter ul li, #facebook ul li{display:inline; float:left;padding:15px 0;}
-#twitter h3, #facebook h3{font-size:1.3em;padding: 8px 10px;}
-#twitter ul li span, #facebook ul li span{margin-left: 60px;display: block;margin-top: -50px;width:200px;font-size:0.9em;}
-
-
-/*#####################      POLOS     ###############################*/
-h2.polo-tit{font-size:4em; text-align:center; margin:40px 0px 20px 0px;font-family: 'Montez', cursive;}
-ul#polo-contenedor{margin: 0 auto;width: 890px;position:relative;}
-ul#polo-contenedor li.zoom{display:inline;float:left;padding:20px 10px;}
-ul#polo-contenedor li.zoom figure{border:solid 1px #101113 ;border-radius:10px;background:#b9bdc5;}
-
-
-/*##################    MANTENIMIENTO   ###########################*/
-h2.tit_article {text-align: center;font-size: 1.7em;margin: 25px 0;}
-form.mantenimiento{width: 600px;float: left;}
-form.mantenimiento ul li{margin:25px 0;}
-form.mantenimiento ul li input.boton{margin-left: 35px;}
-form.mantenimiento ul li label {margin-left: 35px;width: 150px;display: block;float: left;}
-figure.mantenimiento img {margin-top: 25px;}
-
-
-
-
-/*###############################    FOOTER    ###############################*/
-
-footer{
-	margin-top:50px;
-	float:left;
-	width:100%; 
-	
-}
-footer .registra{
-	text-align: center;
-	line-height: 3.2em;
-}
-footer .registra h4{
-	font-size:1.6em;
-}
-footer .registra h5, footer .registra a{
-	font-size:1.1em;
-	color: #3D4445;
-}
-footer  .oferta{	
-	height: 553px;
-	width: 276px;
-}
-
-footer .oferta span{
-	background: url(../img/negocia.png) no-repeat 0 0;
-	display:block;
-	height: 138px;
-	width: 553px;
+	padding: 50px 0px;
 	margin: 0 auto;
-	
 }
 
-footer .oferta span:hover
+header #login 
 {
-	background: url(../img/negocia.png) no-repeat 0 -138px;
+    float: right;
+    font-size: 110%;
+    position: relative;
+    bottom: 13px;
+    color: hsl(140, 75%, 40%);
 }
 
-
-footer #foot_cont
+header h1 
 {
-	background: #1A1D1D;
-	padding: 30px 20px; 
-	height: 120px;
+	font-size: 3em;
+	position: relative;
 }
 
-footer #contacto
+header h1:after 
 {
-	margin:0 auto;
-	width:960px;
+    content: "Threadmore!";
+    position: absolute;
+    font-weight: bold;
+    color: hsla(150, 30%, 70%, 0.3);
+    top: 0.4em;
+    left: 0.4em;
+    z-index: -1;
+    font-size: 180%;
 }
 
-footer div.siguenos, footer div.suscribete, footer div.otros{width:250px;color:#DDD;}
-footer div.siguenos h3, footer div.suscribete h3, footer div.otros h3{font-size:1.3em;margin-bottom:15px;font-weight:bold;}
-footer div.siguenos ul, footer div.suscribete ul, footer div.otros ul{font-size:0.9em;}
-footer div.siguenos{float:left;}
-footer div.siguenos ul li{display:inline;margin:10px 12px;}
-footer div.suscribete{margin: 0 auto;}
-footer div.suscribete input{width:100px;border-radius:5px;padding:2px 8px;margin:2px 4px;}
-footer div.suscribete .btn{width:100px;border-radius:5px;padding:2px 8px;margin:2px 4px;background:#159;}
-footer div.otros{float:right;margin-top:-120px;margin-right: 20px;}
+#the-polo
+{
+    overflow: hidden;
+    width: 960px;
+    margin: 3em auto;  
+    height: 460px;
+}
+
+#polo
+{
+    width: 636px;
+    border: 1px solid #444;
+    position: relative;
+    overflow: hidden;
+    float: left;
+}
+
+#polo, #buy-polo
+{
+    height: 100%;
+}
+
+#buy-polo 
+{
+    float: right;
+    width: 310px;
+}
+
+#price, #remaining
+{
+    color: hsl(0, 0%, 88%);
+    font-size: 2em;
+    padding: 0.5em;
+    background-color: hsl(0, 0%, 14%);
+    width: auto;
+    letter-spacing: 0.1em;
+    position: absolute;
+    border-bottom: 1px dashed hsl(150, 20%, 50%);
+    top: 0px;
+}
+
+#price 
+{
+    right: 0px;
+    border-left: 1px dashed hsl(0, 20%, 50%);
+}
+
+#remaining
+{
+    left: 0px;
+    border-right: 1px dashed hsl(0, 30%, 50%);
+}
+
+#polo img 
+{
+    width: 636px;
+}
