--- a/Styles/screen.css
+++ b/Styles/screen.css
@@ -262,3 +262,13 @@ body {
   background: -webkit-linear-gradient(top, #5299e0 0%, #1f6bad 100%);
   box-shadow: inset 0 0 1px #7db2e8, inset 0 1px 0 rgba(168, 204, 240, 0.75), 0 1px 0 #595959;
 }
+
+th 
+{
+    text-transform: capitalize
+}
+
+td 
+{
+    padding: 0.75em
+}
