--- a/Skeu.master
+++ b/Skeu.master
@@ -36,6 +36,7 @@
       </div>
     </div>
       <script type="text/javascript" src="/lp3/Scripts/jquery-1.7.1.min.js"></script>
+      <script type="text/javascript" src="/lp3/Scripts/spin.js"></script>
       <script type="text/javascript" src="/lp3/Scripts/jquery-ui-1.8.21.custom.min.js"></script>
       <script type="text/javascript" src="/lp3/Scripts/admin.js"></script>
   </body>
