--- a/Styles/menu.css
+++ b/Styles/menu.css
@@ -162,7 +162,7 @@ div.contacto ul li,div.info ul li{margin:20px 0;}
 div.contacto ul li label{display:inline-block;width:120px;}
 div.contacto ul li textarea{margin: -20px 0px 0px 122px; width: 200px; height: 150px;}
 div.contacto ul li input[type="text"]{padding:4px 5px;}
-div.contacto ul li input[type="submit"]{-webkit-border-radius: 5px;
+input[type="submit"]{-webkit-border-radius: 5px;
 									-moz-border-radius: 5px;
 									-ms-border-radius: 5px;
 									-o-border-radius: 5px;
@@ -174,8 +174,8 @@ div.contacto ul li input[type="submit"]{-webkit-border-radius: 5px;
 									margin-bottom:20px;
 									border: solid 1px #333;
 									padding: 5px 6px;}
-div.contacto ul li input[type="submit"]:hover{background:#eee;color:#1A1D1D;}
-div.contacto ul li input[type="submit"]:active{background:#eee;color:#1A1D1D;box-shadow:0px 0px 0px white;}
+input[type="submit"]:hover{background:#eee;color:#1A1D1D;}
+input[type="submit"]:active{background:#eee;color:#1A1D1D;box-shadow:0px 0px 0px white;}
 div.contacto{margin-left:60px;}
 div.info{padding-left:90px;margin-left:5px;border-left:2px dotted #1A1D1D;}
 div.info ul li img{position:relative;top:10px;margin-right:15px;}
@@ -191,24 +191,29 @@ figure.mantenimiento img {margin-top: 25px;}
 /*########################## CARRITO  ############################*/
 div.carrito{margin-left:35px;}
 div.carrito h1{margin-top: 35px;font-size: 2.3em;margin-bottom: 25px;}
-div.carrito table{border:solid 1px #1A1D1D;box-shadow: 3px 3px 10px #888;width:700px}
+div.carrito table{border:solid 1px #1A1D1D;box-shadow: 3px 3px 10px #888;width:700px; margin-bottom: 2em;}
 div.carrito table tr{text-align:center;}
 div.carrito table tr:nth-child(2n+1){background:#dcdddf;}
 div.carrito table tr:first-child{background:#1A1D1D;}
 div.carrito table tr:first-child td{padding-top:15px;padding-bottom:15px;font-size:1.1em;font-weight:bold;color:#CCC;}
 div.carrito table tr td{padding:0 55px;}
+div.carrito img 
+{
+    margin: 0.4em 0em;
+    border: 1px solid #AAA;
+}
 .login {border:1px solid #1A1D1D;margin-top:25px;width:280px;box-shadow: 3px 3px 10px #888;float:left;margin-right:25px;background:#dcdddf;}
 .login h3, .pasarela h3{background:#1A1D1D;padding:15px 25px;color:#CCC;font-weight:bold;}
 .login ul li label{display:block;margin-top:20px;font-size:1.1em;margin-left:20px;margin-bottom:5px;}
-.login ul li input[type="submit"]{-webkit-border-radius: 5px;
+input[type="submit"]{-webkit-border-radius: 5px;
 											-moz-border-radius: 5px;
 											-ms-border-radius: 5px;
 											-o-border-radius: 5px;
 											border-radius: 5px;
 											box-shadow: 3px 3px 6px #444;
 											background:#1A1D1D;color:#eee;}
-.login ul li input[type="submit"]:hover{background:#eee;color:#1A1D1D;}
-.login ul li input[type="submit"]:active{background:#eee;color:#1A1D1D;box-shadow:0px 0px 0px white;}
+input[type="submit"]:hover{background:#eee;color:#1A1D1D;}
+input[type="submit"]:active{background:#eee;color:#1A1D1D;box-shadow:0px 0px 0px white;}
 .login ul li input {font-size:1.1em;
 							margin-left:35px;
 							margin-bottom:20px;
@@ -316,9 +321,20 @@ footer div.otros{float:right;margin-top:-120px;margin-right: 20px;}
 {
     position: relative;
     width: 260px;
+    overflow: hidden;
 }
 
-.polo .detail 
+.polo figure img 
+{
+    width: 100%;
+}
+
+.polo:hover .detail
+{
+  
+}
+
+.polo .detail
 {
     position: absolute;
     bottom: 0px;
@@ -344,3 +360,4 @@ footer div.otros{float:right;margin-top:-120px;margin-right: 20px;}
 {
     text-decoration: underline;
 }
+
