--- a/Styles/screen.css
+++ b/Styles/screen.css
@@ -302,3 +302,10 @@ td
 {
     background-color: hsla(0, 0%, 60%, 0.8);
 }
+
+#loader {
+    width: 30px;
+    height: 30px;
+    padding-top: 11px;
+    padding-left: 12px;
+}
