--- a/Styles/style.css
+++ b/Styles/style.css
@@ -62,6 +62,10 @@
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
 	font-family: 'Economica', Arial, sans-serif;
 	font-weight: 700;
+	width: 640px;
+    overflow: hidden;
+    height: 50px;
+    padding-top: 20px;
 }
 .da-slide p{
 	width: 45%;
